src/tests/testfiles/unary-operators/types-12.txt
Error at 2:2: lvalue required as increment operand
++5;
^
